<resources>
    <string name="app_name">Headphones</string>
    <string name="noise_cancel">NOISE CANCEL</string>
    <string name="noise_cancel_1">Noise\ncancelling</string>
    <string name="control_off">OFF</string>
    <string name="awareness">AMBIENT AWARENESS</string>
    <string name="ambient_awareness">Ambient awareness</string>
    <string name="highView">HIGH</string>
    <string name="mediumView">MEDIUM</string>
    <string name="lowView">LOW</string>
    <string name="text_noise_canceling">Noise\ncancelling</string>
    <string name="text_ambient_aware">Ambient\nAware</string>
    <string name="text_ambient_aware_1">Ambient Aware</string>
    <string name="title_eq">EQ</string>
    <string name="title_eq_setting">EQ</string>
    <string name="text_auto_off">Auto-off</string>
    <string name="dialog_message_create_my_own_eq">Currently no EQ created \nTap below button to create one</string>
    <string name="title_eq_edit">Edit EQ</string>
    <string name="eq_add_first_time_tip">Tap the line to add\nand move a knob</string>
    <string name="create_eq_default_name">My EQ</string>
    <string name="eq_off_name_text">Off</string>
    <string name="deviceName">JBL Device</string>
    <string name="text_settings">Settings</string>
    <string name="firmware">Firmware</string>
    <string name="text_smart_button">Programmable Smart Button</string>
    <string name="online_user_manual">Online user manual</string>
    <string name="text_auto_off_feature">Auto-off timer</string>
    <string name="text_voice_prompt">Enable Voice Prompt</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="eula">EULA</string>
    <string name="harman_privacy_policy">Harman Privacy Statement</string>
    <string name="font_name_open_sans">OpenSans</string>
    <string name="font_name_open_sans_semi">OpenSans-Semibold</string>
    <string name="font_name_open_sans_bold">OpenSans-bold</string>
    <string name="true_note">TruNote</string>
    <string name="sound_x_setup">SoundX setup</string>
    <string name="voice_assistant">Voice assistant</string>
    <string name="voice_assistant_hint">Set up your voice assistant with JBL Headphones</string>
    <string name="goto_google_voice_assistant">Go to your Google\n assistant settings</string>
    <string name="voice_assistant_set_up_later">Do it later</string>
    <string name="set_voice_assistant_by_JBL_headphones">Set up your preferred voice assistant with your JBL headphones</string>
    <string name="voice_assistant_setting">Voice assistant setting</string>
    <string name="set_voice_assistant_later_from_setting">You may change settings of voice assistants from the settings memu later</string>
    <string name="user_manual">User manual</string>
    <string name="updating">Updating&#8230;</string>
    <string name="update_failed_connection">Connection failed</string>
    <string name="update_failed_connection_detail">Can’t connect to your headphones after restarting. Please make sure Bluetooth is connected.</string>
    <string name="update_failed_firmware">Upgrade failed</string>
    <string name="update_failed_firmware_detail">Please check your Internet connection and try again.</string>
    <string name="update_failed_firmware_detail_1">Firmware update failed.</string>
    <string name="update_failed_download">Download failed</string>
    <string name="update_failed_download_detail">Please check your Internet connection and try again.</string>
    <string name="text_ota_title">Product software update</string>
    <string name="firmware_is_updating_title"><b>Firmware is Updating…</b></string>
    <string name="firmware_is_updating">1.Please do not close the application.\n2.Keep the headset near the device.\n3.Pluggin in the headphones is recommended.</string>
    <string name="firmware_is_available">New software update version %1$s is available</string>
    <string name="current_firmware">Current software version is %1$s</string>
    <string name="firmware_is_installed">Firmware version %1$s is installed</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>
    <string name="got_it">Got it</string>
    <string name="plus">Plus</string>
    <string name="text_product_help">Product help</string>
    <string name="text_jbl_com">JBL.com</string>
    <string name="text_open_source_license">Open source licenses</string>
    <string name="text_eula">EULA</string>
    <string name="text_harman_privacy_policy">Harman privacy policy</string>
    <string name="eula_agree_and_start">AGREE and START</string>
    <string name="confirm_to_tips">Please confirm that you have\nread and agree to</string>
    <string name="legal_the">The&#160;</string>
    <string name="agree_to_eula">End User License Agreement</string>
    <string name="harman_eula">Harman End User License Agreement</string>
    <string name="agree_to_hpp">Harman Privacy Statement</string>
    <string name="hpp_title">Harman Privacy Statement</string>
    <string name="start_caps">Start</string>
    <string name="eula_title">End User License\nAgreement</string>
    <string name="app_version">App version:</string>
    <string name="get_start">Get start</string>
    <string name="start">Start</string>
    <string name="help">1. Put on headphones \n2. Push start button</string>
    <string name="personalizemessgae">Personalize your audio\nexperience with\nTruNote Auto Calibration</string>
    <string name="calibrating">Calibrating</string>
    <string name="cancel">Cancel</string>
    <string name="extrahelp">Calibrate headphones anytime in settings</string>
    <string name="autoComplete">TruNote Auto Calibration \nComplete</string>
    <string name="failcalibration">Calibration failed. Try again</string>
    <string name="IE_No_calbration">Your headphones don\'t support Calibration.</string>
    <string name="text_calibration_title">TrueNote calibration</string>
    <string name="TrueNote">TruNote</string>
    <string name="advice_reflect_aware">Try unplugging and plugging in your headphones.</string>
    <string name="advice_three">1. Make sure your product is paired with your mobile via Bluetooth.</string>
    <string name="how_to_pair">how to pair my headphones?</string>
    <string name="advice_four">2. Pause music on your headphones.</string>
    <string name="advice_five">3. Disconnect your product from other Bluetooth device.</string>
    <string name="advice_six">4. Restart your product。</string>
    <string name="try_again">Try again</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_detail_1">Visit control center and turn on Bluetooth.</string>
    <string name="turn_on_bluetooth_detail_2">The Bluetooth icon will turn blue.</string>
    <string name="turn_on_bluetooth_detail_3"><u>Still see this screen?</u></string>
    <string name="turn_on_bluetooth_still_see">Still see this screen</string>
    <string name="turn_on_bluetooth_still_see_detail">If you still see this screen,try to turn off and then turn on Bluetooth again from mobile settings</string>
    <string name="turn_on_off_noise_cancel">Turn on and off noise\ncanceling</string>
    <string name="ambient_aware_tips">Once noise cancelling is on,\nadjust ambient awareness\nusing presets or sliders</string>
    <string name="OK">OK</string>
    <string name="exit">Exit</string>
    <string name="plsConnect">Please connect\n headphones.</string>
    <string name="taking_longer_time">Connecting with headphone is taking time. Please wait&#8230;</string>
    <string name="timeout">Headphone is not responding because of slow phone, Please wait&#8230;</string>
    <string name="off">OFF</string>
    <string name="jazz">JAZZ</string>
    <string name="vocal">VOCAL</string>
    <string name="bass">BASS</string>
    <string name="custom_eq">Custom EQ</string>
    <string name="replug">Unplug then replug in USB Type C</string>
    <string name="unplug_plug_while_update_error">"Update process interrupted. \nPress OK to restart the process"</string>
    <string name="battery_alert">The battery level of your headphones needs to be above 50% to perform a firmware update or connect charger and restart update.</string>
    <string name="ambientAware">Ambient Aware</string>
    <string name="smart_ambient">Smart Ambient</string>
    <string name="smart_ambient_button_assignment">Smart Ambient\nButton assignment</string>
    <string name="noise_cancelling">Noise Cancellation</string>
    <string name="ambient">Use the smart button on your\nheadphones to turn Ambient\nAwareness on and off.</string>
    <string name="noise_cancel_tip">Use the smart button on your\nheadphones to turn Noise Cancelling\non and off.</string>
    <string name="IE_no_calibration">Your headphones don\'t support Calibration.</string>
    <string name="five_minute">5min</string>
    <string name="ten_minute">10min</string>
    <string name="thirty_minute">30min</string>
    <string name="never">Never</string>
    <string name="talkthru">TalkThru</string>
    <string name="no_headphones_found">No headphones found</string>
    <string name="make_sure_your_headphones_are_in_the_list_below">Make sure your headphones\nare in the list bellow</string>
    <string name="All_product_lists">If you can\'t find your product here,please make sure the app is the latest version.</string>
    <string name="live_650bt_nc">LIVE 650BTNC</string>
    <string name="live_500bt">LIVE 500BT</string>
    <string name="live_400bt">LIVE 400BT</string>
    <string name="everest_elite_750nc">EVEREST ELITE 750NC</string>
    <string name="reflect_aware">REFLECT AWARE</string>
    <string name="everest_elite_700">EVEREST ELITE 700</string>
    <string name="everest_elite_150nc">EVEREST ELITE 150NC</string>
    <string name="everest_elite_100">EVEREST ELITE 100</string>
    <string name="everest_elite_300">EVEREST ELITE 300</string>
    <string name="tutorial_tips_zero_live">Tap the icon to re-assign the function of smart ambient button.</string>
    <string name="tutorial_tips_one_live">Now the smart ambient button is used for Daylight ambient.</string>
    <string name="tutorial_tips_two_live">Now the smart ambient button is used for TalkTru.</string>
    <string name="tutorial_tips_zero_live_400">Tap TalkThru to keep your\nheadphones on and have clear\nconversations.\n\nTap Ambient Aware to be aware of your surroundings </string>
    <string name="tutorial_tips_zero_live_650">Noise cancelling is switched on.\nToggle on and off noise\ncancelling by tapping the icon.</string>
    <string name="go_to_bluetooth">Go to Bluetooth</string>
    <string name="not_connected_title">App can only connect with one pair of headphones</string>
    <string name="not_connected_content">To access all functions for JBL Everest elite 750NC, please disconnect another JBL headphones from your mobile.</string>
    <string name="not_connected_keep_using">Keep using like this</string>
    <string name="text18">Beginner</string>
    <string name="text19">Average</string>
    <string name="experienced">Experienced</string>
    <string name="trained">Trained</string>
    <string name="beginner_msg">No formal listening training.</string>
    <string name="avg_msg">Some familiarity with bass, treble, etc.</string>
    <string name="alot_msg">Participated in listening tests, understand frequency, distortion.</string>
    <string name="text25">Formal Harman How-To-Listen trained or similar university or Tonmeister training.</string>
    <string name="listening_exp">Listening experience</string>
    <string name="configure_dialog_title">Replace current SoundX data?</string>
    <string name="configure_dialog_msg">The following process will replace the current SoundX data setup before, do you want to replace them and set up new data?</string>
    <string name="setup_new_data">Set up new data</string>
    <string name="use_old_data">Use old data</string>
</resources>