<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_legal">

    <ImageView
        android:id="@+id/image_view_calibration_global_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_marginStart="22dp"
        android:background="@mipmap/grey_arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/text_calibration_title" />

    <TextView
        android:id="@+id/txtConnectMessage"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/autoCalimarginTopLess"
        android:layout_marginTop="90dp"
        android:gravity="left"
        android:text="@string/personalizemessgae"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txthelp"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConnectMessage"
        android:layout_marginStart="@dimen/autoCalimarginTopLess"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txtHelp"
        android:textStyle="normal" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txthelp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/autoCalimarginTop">

        <FrameLayout
            android:id="@+id/informationLayout"
            android:layout_width="@dimen/whitecircle"
            android:layout_height="@dimen/whitecircle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/whitecircle">

            <TextView
                android:id="@+id/txtChangeMessage"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@drawable/textcolorselction"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/progressbar"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtCalibrating"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/informationLayout"
            android:layout_centerHorizontal="true"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="@string/calibrating"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txtConnecting"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtExtraHelp"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/extrahelp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txtBelowMessage"
        android:visibility="gone" />
</RelativeLayout>
