<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_round_corner"
        android:orientation="vertical">

        <jbl.stc.com.view.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/not_connected_title"
            android:textColor="@color/smart_audio_popup_text_color1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <jbl.stc.com.view.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/not_connected_content"
            android:textColor="@color/smart_audio_popup_text_color1"
            android:textSize="16sp" />

        <jbl.stc.com.view.ShadowLayout
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <jbl.stc.com.view.AppButton
                android:id="@+id/button_not_connected_popup_go_to_bluetooth"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rectangle_with_round_corner_view_page_orange"
                android:gravity="center"
                android:text="@string/go_to_bluetooth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </jbl.stc.com.view.ShadowLayout>

        <jbl.stc.com.view.AppButton
            android:id="@+id/text_view_not_connected_popup_keep_using"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_with_round_corner_orange"
            android:gravity="center"
            android:text="@string/not_connected_keep_using"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
