<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_new_tutorial_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_turn_on_bt">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:paddingLeft="@dimen/margin_top_10dp"
        android:paddingRight="@dimen/margin_top_10dp"
        >
        <ImageView
            android:id="@+id/iv_close_four"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_close" />
        <ImageView
            android:id="@+id/iv_back_four"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/black_arrow_back" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_below="@id/rl_title"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_dashboard_device_circle"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/text_auto_off_feature"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/grey_turn_on_bt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/text_voice_prompt"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_turn_on_bt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/text_product_help"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/grey_turn_on_bt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/firmware"
            />

    </LinearLayout>

    <TextView
        android:layout_below="@id/ll_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:text="Find other headphones information and setups on settings"
        />


    <TextView
        android:id="@+id/text_view_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle_with_round_corner_view_page_orange"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="7dp"
        android:text="@string/get_start"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
